解决用户恶意代码问题（非最优解） 超时控制:使用守护线程 限制用户分配的空间：使用Xmx命令 限制代码-黑白名单（代码注释了） 限制用户操作权限（重点，但是该方法在17后被废弃） SecurityManager 更新README文档笔记